# twinbird

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
src/twinbird/: cli.py  config.py  daemon.py  instance.py  netbird.py  platform.py  service.py
tests/: test_config.py  test_daemon.py  test_instance.py  test_netbird.py  test_platform.py  test_service.py
