[project]
name = "twinbird"
version = "0.1.1"
description = "Manage multiple NetBird instances with isolated configs, sockets, and interfaces"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "OseSem", email = "sem@osesem.xyz" }
]
keywords = ["netbird", "vpn", "wireguard", "multi-instance", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
twinbird = "twinbird.cli:app"

[project.urls]
Homepage = "https://github.com/OseSem/twinbird"
Repository = "https://github.com/OseSem/twinbird"
Issues = "https://github.com/OseSem/twinbird/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twinbird"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.pyright]
typeCheckingMode = "standard"
include = ["src/twinbird"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
